Update README with latest logic and commands