@@ -6,13 +6,20 @@
 
 ## What This MVP Demonstrates
 
-Two fully independent nodes running on **one machine**, discovering each
-other via UDP multicast on localhost, and syncing queue state over TCP sockets.
+Two or more fully independent nodes running on **one machine**, discovering each
+other via UDP multicast and syncing queue state over TCP sockets. 
 
-- Student joins queue on Node 1 → Node 2 sees it immediately
-- Admin clears a student on Node 2 → Node 1 reflects the update
-- Close Node 1 → Node 2 keeps running (fault tolerance)
-- Restart Node 1 → it requests a SYNC from Node 2 and rebuilds its queue
+This system features **Role-Based Access**:
+- **Admin Nodes (e.g., OFFICER):** Can see the entire queue and are the *only* nodes authorized to clear tickets.
+- **Regular Nodes (e.g., STUDENT):** Can join the queue but can only view their own tickets. They cannot clear tickets.
+- **Global Awareness:** All nodes display accurate, real-time aggregate stats (total waiting, total cleared) and global queue positions.
+- **Restrictions:** A regular node can only have one active ticket in the queue at any given time.
+
+### Key Features
+- **Instant Synchronization:** When an Admin clears a student, the update is instantly broadcasted and reflects on all connected nodes.
+- **Fault Tolerance:** If a node crashes or is closed, the rest of the network continues uninterrupted.
+- **Data Persistence:** Every node maintains its own local SQLite database (`.db`). When a node restarts, it loads its history and requests a fresh SYNC from the network.
+- **Self-Healing Schema:** The database automatically detects schema changes and recreates tables to prevent corruption.
 
 ---
 
@@ -22,136 +29,86 @@ other via UDP multicast on localhost, and syncing queue state over TCP sockets.
 | --------------------------- | ------- | --------------------------------- |
 | JDK                         | 17+     | https://adoptium.net              |
 | Maven                       | 3.8+    | https://maven.apache.org/download |
-| IntelliJ IDEA (recommended) | Any     | https://www.jetbrains.com/idea    |
 
 ---
 
-## Quick Start (2 Nodes on One Machine)
+## Quick Start (Running on One Machine)
 
-### Step 1 — Open TWO terminal windows
+### Step 1 — Open TWO terminal windows in the project root directory.
 
-### Step 2 — Build the project (first time only)
-
-```bash
-cd dqms-mvp
-mvn clean package -D skipTests
-```
-
-### Step 3 — Start Node 1 (Terminal 1)
+### Step 2 — Build the project (first time or after changes)
 
 ```bash
-mvn javafx:run -D javafx.args="5001 NODE_001"
+mvn clean compile
 ```
 
-### Step 4 — Start Node 2 (Terminal 2, wait ~5 seconds after Node 1)
+### Step 3 — Start the Admin Node (Terminal 1)
+
+*Note the space after `-D` and the `ADMIN` flag at the end.*
 
 ```bash
-mvn javafx:run -D javafx.args="5002 NODE_002"
+mvn javafx:run -D javafx.args="5001 OFFICER ADMIN"
 ```
 
-Node 2 will:
+### Step 4 — Start a Regular Node (Terminal 2)
 
-1. Discover Node 1 via UDP multicast
-2. Send a SYNC_REQUEST to Node 1
-3. Receive all existing tickets in a SYNC_RESPONSE
-4. Display the synced queue in its UI
+```bash
+mvn javafx:run -D javafx.args="5002 STUDENT_01"
+```
 
----
-
-## Running in IntelliJ IDEA
-
-1. Open the `dqms-mvp` folder as a Maven project
-2. Let IntelliJ import dependencies (wait for Maven sync)
-3. Create two Run Configurations:
-
-**Run Config 1 — Node 1:**
-
-- Main class: `com.dqms.app.Main`
-- Program arguments: `5001 NODE_001`
-- VM options: `--module-path $JAVAFX_HOME/lib --add-modules javafx.controls,javafx.fxml`
-
-**Run Config 2 — Node 2:**
-
-- Main class: `com.dqms.app.Main`
-- Program arguments: `5002 NODE_002`
-
-4. Run Config 1 first, then Run Config 2
+The Student Node will:
+1. Discover the Admin via UDP multicast.
+2. Send a `SYNC_REQUEST` to the Admin.
+3. Receive all its existing tickets in a `SYNC_RESPONSE`.
+4. Display the synced queue in its UI.
 
 ---
 
 ## Demo Script (Show This to Your Supervisor)
 
-### Scene 1: Normal P2P Sync
-
-1. Start Node 1 and Node 2
-2. On **Node 1**: enter reg number + name, click "Join Queue"
-3. Watch **Node 2** update automatically (within ~1 second)
-4. On **Node 2**: enter a different student, click "Join Queue"
-5. Watch **Node 1** update — FIFO order is maintained across both nodes
+### Scene 1: Joining the Queue & Global Stats
+1. Start the Admin (`OFFICER`) and a Regular Node (`STUDENT_01`).
+2. On the **Student Node**: enter a registration number + name, and click "Join Queue".
+3. Notice the UI prevents the student from joining again ("You are currently in the queue").
+4. Look at the **Admin Node**: The new ticket appears instantly in the table. Both nodes show "Waiting: 1" at the top.
 
 ### Scene 2: Admin Clearance Propagation
+1. On the **Admin Node**: select the WAITING student in the table and click "Mark Cleared".
+2. Watch the **Student Node** update instantly — the global stats change to "Waiting: 0, Cleared: 1", and the student's local view shows their ticket as CLEARED.
 
-1. On **Node 1**: select a WAITING student, click "Mark Cleared"
-2. Watch **Node 2** update — student shows as CLEARED on both dashboards
-
-### Scene 3: Fault Tolerance (Node Failure)
-
-1. Close Node 1 (Ctrl+C or close window)
-2. On **Node 2**: add more students — it keeps working alone
-3. Restart Node 1: `mvn javafx:run -Djavafx.args="5001 NODE_001"`
-4. Node 1 rediscovers Node 2, requests SYNC, and rebuilds the full queue
-
-### Scene 4: Data Persistence
-
-1. Close BOTH nodes
-2. Check the generated `.db` files: `dqms_NODE_001.db`, `dqms_NODE_002.db`
-3. Restart Node 1 — it loads all tickets from its local SQLite file
+### Scene 3: Fault Tolerance & Data Persistence
+1. Close the Student Node.
+2. Restart the Student Node using the exact same command.
+3. It instantly connects to the Admin, requests a sync, and its history (the cleared ticket) appears without any data loss.
+4. Check the project folder: You will see `dqms_OFFICER.db` and `dqms_STUDENT_01.db` representing the localized, decentralized storage.
 
 ---
 
 ## Project Structure
 
-```
-dqms-mvp/
-├── pom.xml
-└── src/main/
-    ├── java/com/dqms/
-    │   ├── app/
-    │   │   └── Main.java              ← Entry point, startup sequence
-    │   ├── model/
-    │   │   ├── Ticket.java            ← Core data entity (Serializable)
-    │   │   ├── Message.java           ← TCP message envelope
-    │   │   └── NodeInfo.java          ← Peer registry entry
-    │   ├── db/
-    │   │   └── DatabaseManager.java   ← SQLite CRUD wrapper
-    │   ├── network/
-    │   │   ├── TCPServer.java         ← Accepts peer connections
-    │   │   ├── TCPClient.java         ← Sends messages to peers
-    │   │   ├── MessageHandler.java    ← Routes incoming messages
-    │   │   └── UDPDiscoveryService.java ← Multicast peer discovery
-    │   ├── queue/
-    │   │   └── QueueManager.java      ← Core business logic
-    │   └── ui/
-    │       └── MainController.java    ← JavaFX dashboard controller
-    └── resources/com/dqms/ui/
-        ├── main.fxml                  ← UI layout
-        └── style.css                  ← Styling
-```
-
----
-
-## Architecture at a Glance
-
-```
-┌──────────────────────┐         UDP Multicast (230.0.0.0:4446)         ┌──────────────────────┐
-│      NODE_001        │ ◄─────────────────────────────────────────────► │      NODE_002        │
-│    port 5001         │                                                  │    port 5002         │
-│                      │         TCP Sockets (direct connection)          │                      │
-│  JavaFX Dashboard    │ ◄─────────────────────────────────────────────► │  JavaFX Dashboard    │
-│  QueueManager        │                                                  │  QueueManager        │
-│  SQLite DB           │                                                  │  SQLite DB           │
-│  (dqms_NODE_001.db)  │                                                  │  (dqms_NODE_002.db)  │
-└──────────────────────┘                                                  └──────────────────────┘
+```text
+src/main/
+├── java/com/dqms/
+│   ├── app/
+│   │   └── Main.java                ← Entry point, arg parsing, startup sequence
+│   ├── model/
+│   │   ├── Ticket.java              ← Core data entity (Serializable)
+│   │   ├── Message.java             ← TCP message envelope
+│   │   └── NodeInfo.java            ← Peer registry entry
+│   ├── db/
+│   │   └── DatabaseManager.java     ← SQLite CRUD wrapper with safe-mode reloading
+│   ├── network/
+│   │   ├── TCPServer.java           ← Accepts peer connections
+│   │   ├── TCPClient.java           ← Sends messages to peers
+│   │   ├── MessageHandler.java      ← Routes incoming messages & handles sync
+│   │   └── UDPDiscoveryService.java ← Multicast peer discovery
+│   ├── queue/
+│   │   └── QueueManager.java        ← Core business logic, memory queue, privacy filters
+│   └── ui/
+│       └── MainController.java      ← JavaFX dashboard controller
+└── resources/com/dqms/ui/
+    ├── main.fxml                    ← UI layout
+    └── style.css                    ← Styling
 ```
 
 ---
@@ -162,16 +119,5 @@ dqms-mvp/
 | ------------------------------- | ----------------------------------------------------------------------- |
 | Port already in use             | Change 5001/5002 to other ports e.g. 6001/6002                          |
 | Nodes don't discover each other | Ensure both run on same machine; check firewall isn't blocking UDP 4446 |
-| `ClassNotFoundException`        | Clean and rebuild: `mvn clean package`                                  |
-| SQLite error on startup         | Delete the `.db` files to start fresh                                   |
-| JavaFX not found                | Add `--module-path` VM option pointing to your JavaFX SDK lib folder    |
-
----
-
-## Next Steps (Extending the MVP)
-
-- Deploy to multiple machines on the same LAN (change `localhost` → LAN IPs)
-- Add password protection to the admin "Mark Cleared" action
-- Add encrypted TCP communication (SSL/TLS socket wrapping)
-- Add a student kiosk mode (read-only view showing queue position)
-- Integrate Hazelcast for more robust group membership management
+| DB Errors / Blank UI            | Stop all nodes, delete the `*.db` files, and restart.                   |
+| `ClassNotFoundException`        | Run: `mvn clean compile`                                                |
